--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,22 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:gravity="right"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="안녕?"
-        android:textColor="@color/design_default_color_error"
-        android:textSize="30sp" />
+    <ImageView
+        android:layout_width="300dp"
+        android:background="#2196F3"
+        android:layout_height="300dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="안녕하이소?"
-        android:textSize="24sp">
+        android:textSize="50dp"
+
+        />
 
 
-    </TextView>
 </LinearLayout>
