--- a/app/src/main/res/layout/relative_layout_practice06.xml
+++ b/app/src/main/res/layout/relative_layout_practice06.xml
@@ -5,25 +5,29 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/one"
+        android:layout_above="@+id/five"
+        android:layout_alignLeft="@+id/five"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#ffffff"/>
+        android:background="#00BCD4"/>
     <TextView
-        android:id="@+id/two"
+        android:layout_above="@+id/five"
+        android:layout_toLeftOf="@+id/five"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#ffffff"/>
+        android:background="#FF9800"/>
     <TextView
-        android:id="@+id/three"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/five"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#ffffff"/>
+        android:background="#FF5722"/>
     <TextView
-        android:id="@+id/four"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/five"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#ffffff"/>
+        android:background="#4CAF50" />
     <TextView
         android:id="@+id/five"
         android:layout_centerInParent="true"
@@ -31,25 +35,29 @@
         android:layout_height="100dp"
         android:background="#F44336"/>
     <TextView
-        android:id="@+id/six"
+        android:layout_above="@+id/five"
+        android:layout_toRightOf="@+id/five"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#ffffff"/>
+        android:background="#CDDC39"/>
     <TextView
-        android:id="@+id/seven"
+        android:layout_toLeftOf="@+id/five"
+        android:layout_below="@+id/five"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#ffffff"/>
+        android:background="#673AB7"/>
     <TextView
-        android:id="@+id/eight"
+        android:layout_toRightOf="@+id/five"
+        android:layout_below="@+id/five"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#ffffff"/>
+        android:background="#FF9800"/>
     <TextView
-        android:id="@+id/nine"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/five"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#ffffff"/>
+        android:background="#FFEB3B"/>
 
 
 
