--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -7,11 +7,12 @@
     android:gravity="right"
     android:orientation="vertical"
     tools:context=".MainActivity">
-
     <ImageView
         android:layout_width="300dp"
+        android:layout_height="300dp"
         android:background="#2196F3"
-        android:layout_height="300dp"/>
+        />
+
 
     <TextView
         android:layout_width="match_parent"
