Android (intent, Task)

--- a/app/src/main/res/layout/activity_intent2.xml
+++ b/app/src/main/res/layout/activity_intent2.xml
@@ -8,6 +8,11 @@
     tools:context=".Intent2">
 
 
+    <Button
+        android:id="@+id/result"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="결과과"/>
 
 
 </LinearLayout>
