--- a/app/src/main/res/layout/activity_phone_book_detail.xml
+++ b/app/src/main/res/layout/activity_phone_book_detail.xml
@@ -11,7 +11,7 @@
 
     <ImageView
         android:id="@+id/back"
-        android:src=" "
+        android:src="@drawable/back"
         android:layout_width="30dp"
         android:layout_height="30dp"/>
 
@@ -22,6 +22,7 @@
         android:src="@drawable/boy"/>
 
     <TextView
+        android:id="@+id/person_detail_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="이름란"
@@ -32,6 +33,7 @@
         />
 
     <TextView
+        android:id="@+id/person_detail_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="010-xxxx-xxxx"
