--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="#FFC107"
     android:orientation="vertical"
     android:padding="6dp"
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:gravity="center"
             android:padding="6dp"
-            android:textSize="50dp"
+            android:textSize="20dp"
             android:layout_height="wrap_content"/>
 
         <TextView
@@ -29,10 +29,10 @@
 
         <TextView
             android:id="@+id/car_engine"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="50dp"/>
+            android:textSize="20dp"/>
     </LinearLayout>
 
     <LinearLayout
