--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context=".EmailSignupActivity">
+    tools:context=".LoginActivity">
 
 
     <TextView
@@ -39,7 +39,7 @@
             android:textColorHint="#8F8585" />
 
         <EditText
-            android:id="@+id/password1_inputbox"
+            android:id="@+id/password_inputbox"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_gravity="center"
@@ -50,51 +50,37 @@
             android:hint="비밀번호를 입력해주세요."
             android:textColorHint="#8F8585" />
 
-
-        <EditText
-            android:id="@+id/password2_inputbox"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="6dp"
-            android:background="#ffffff"
-            android:gravity="center"
-            android:inputType="textPassword"
-            android:hint="비밀번호를 다시 입력해주세요."
-            android:textColorHint="#8F8585" />
-
-
     </LinearLayout>
 
-        <TextView
-            android:id="@+id/register"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:paddingRight="32dp"
-            android:paddingBottom="16dp"
-            android:paddingLeft="32dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="16dp"
-            android:paddingTop="16dp"
-            android:gravity="center"
-            android:background="#716D6D"
-            android:text="가입하기"
-            android:textStyle="bold"
-            android:textSize="16dp"/>
+    <TextView
+        android:id="@+id/register"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:paddingRight="32dp"
+        android:paddingBottom="16dp"
+        android:paddingLeft="32dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="16dp"
+        android:paddingTop="16dp"
+        android:gravity="center"
+        android:background="#716D6D"
+        android:text="가입하기"
+        android:textStyle="bold"
+        android:textSize="16dp"/>
 
-        <TextView
-            android:id="@+id/login_sp"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:paddingRight="32dp"
-            android:paddingBottom="16dp"
-            android:paddingLeft="32dp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:paddingTop="16dp"
-            android:background="#8A8888"
-            android:text="로그인 하기"
-            android:textStyle="bold"
-            android:textSize="16dp"/>
+    <TextView
+        android:id="@+id/login_sp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:paddingRight="32dp"
+        android:paddingBottom="16dp"
+        android:paddingLeft="32dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingTop="16dp"
+        android:background="#8A8888"
+        android:text="로그인 하기"
+        android:textStyle="bold"
+        android:textSize="16dp"/>
 
 </LinearLayout>
