--- a/app/src/main/res/layout/activity_out_stagram_my_post_list.xml
+++ b/app/src/main/res/layout/activity_out_stagram_my_post_list.xml
@@ -1,9 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OutStagramMyPostListActivity">
+    android:orientation="vertical"
+    tools:context=".OutStagramPostListActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/myPost_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/all._list"
+            android:layout_width="0dp"
+            android:text="전체"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:background="#D89E49"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/my_list"
+            android:layout_width="0dp"
+            android:text="본인"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:background="#FF9800"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/upload"
+            android:layout_width="0dp"
+            android:text="업로드"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:background="#8F5B0E"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/user_info"
+            android:layout_width="0dp"
+            android:text="정보"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:background="#D8932D"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+</LinearLayout>
