--- a/app/src/main/res/layout/activity_out_stagram_upload.xml
+++ b/app/src/main/res/layout/activity_out_stagram_upload.xml
@@ -1,9 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".OutStagramUploadActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/content_input"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:hint="내용을 작성해주세요."/>
+
+    <TextView
+        android:id="@+id/view_pictures"
+        android:layout_width="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"
+        android:text="사진 선택"
+        android:textSize="40dp"
+        android:layout_marginBottom="16dp"
+        android:textColor="#ffffff"
+        android:background="@color/cardview_dark_background"
+        android:gravity="center" />
+
+
+    <TextView
+        android:id="@+id/upload_post"
+        android:layout_below="@+id/view_pictures"
+        android:layout_width="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"
+        android:text="업로드"
+        android:textSize="40dp"
+        android:textColor="#ffffff"
+        android:background="@color/cardview_dark_background"
+        android:gravity="center" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/all._list"
+            android:layout_width="0dp"
+            android:text="전체"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:background="#D89E49"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/my_list"
+            android:layout_width="0dp"
+            android:text="본인"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:background="#FF9800"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/upload"
+            android:layout_width="0dp"
+            android:text="업로드"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:background="#8F5B0E"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/user_info"
+            android:layout_width="0dp"
+            android:text="정보"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:background="#D8932D"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
